# weno

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile~  Notes  README  core  db  functions.c  functions.c~  main  main.c  main.cc  main.cpp  main.c~  ncurses-main.c  ncurses-main.c~  prototypes.h  prototypes.h~  rowdy  sick  sickness  stuff-to-do  stuff-to-do~  test  test.c  test.c~  weno
.weno/: .key
cmake_modules/: AddGitSubmodule.cmake  Docs.cmake
configured/: config.hpp.in
configured_files/include/: config.hpp
docs/: Doxyfile
docs/html/: dir_3016fb797be5c40dd190266308318a14.html  index.html
docs/latex/: refman.tex
include/: Weno.h
src/: CMakeLists.txt  Client.cpp  Client.h  Server.cpp  Server.h  Weno.cc  Weno.h  main.cc  server.crt  server.key  weno-client.cc  weno-client.cpp  weno-server.cc  weno-server.cpp
