if (COMPILE_EXECUTABLE)
	add_executable(${EXECUTABLE_NAME}-server weno-server.cc Weno.cc ../include/Weno.h)
	add_executable(${EXECUTABLE_NAME}-client weno-client.cc Weno.cc ../include/Weno.h)
	target_include_directories(${EXECUTABLE_NAME}-server PUBLIC ${PROJECT_SOURCE_DIR/include})
	target_include_directories(${EXECUTABLE_NAME}-client PUBLIC ${PROJECT_SOURCE_DIR/include})
else()
	message("W/o exe. compiling")
endif()
